// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Component Snapshots Checked toggle matches snapshot 1`] = `
<label
  className="toggle"
>
  <input
    checked={true}
    type="checkbox"
  />
  <div
    className="slider"
  >
    <div
      className="gradient"
    />
    <div
      className="switch"
    />
  </div>
</label>
`;

exports[`Toggle Component Snapshots Default checked toggle matches snapshot 1`] = `
<label
  className="toggle"
>
  <input
    defaultChecked={true}
    type="checkbox"
  />
  <div
    className="slider"
  >
    <div
      className="gradient"
    />
    <div
      className="switch"
    />
  </div>
</label>
`;
